Add driver for Partner ECR's